# tricot

./: .gitignore  CMakeLists.txt  Makefile  README.md  TODO.md  brainfuck.c  interpreter.c  main.cpp
.build/: CMakeCache.txt  Makefile  cmake_install.cmake  tricot
assets/calibration/: reorganize.sh
assets/header/: reorganize.sh
assets/tricot_example/: doc.odt  v1.xcf  v2.xcf
include/: reader.hpp  verbose.hpp
inputs/: bf  bf1  bf2  bf3  bf4
srcs/: .reader.cpp  brainfuck.c  brainfuck.cpp  interpreter.cpp  main.cpp  reader.cpp  verbose.cpp
srcs/tmp/: 1.txt  2.txt  3.txt  4.txt  color.py  rgb_values.txt
srcs/visualise/: README.md  color.py
